--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo-site">	
 				<a href="#"><img src="logo.png"></a>
-				<h1><a href="#">Barbearia Alura</a></h1>
+				<h1><a href="#">monster bike</a></h1>
 			</div>
 			<nav>
 				<ul>
@@ -21,6 +21,10 @@
 				</ul>
 			</nav>
     </header>
-
+   <footer>
+        <img src="logo-branco.png">
+		<p class="copyright">&copy; Copyright monster bike - 2023</p>
+        <p class="copyright">Desenvolvido por: Luiz Eduardo, Igor , guilherme cardoso , guilherme matusiak , Daniel.</p>
+    </footer>
 </body>
 </html>
