--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo-site">	
 				<a href="#"><img src="logo.png"></a>
 				<h1><a href="#">monster bike</a></h1>
-			</div>
+		</div>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -21,8 +21,12 @@
 				</ul>
 			</nav>
     </header>
+    <main>
+        A MOSTER BIKE é uma empresa apaixonada pela transformação que o uso de uma bicicleta pode trazer à vida das pessoas. Por isso, dedicamos toda a nossa energia e foco em fornecer o melhor para você, nosso cliente. Com 1 anos de experiência e crescimento constante, nosso objetivo é proporcionar produtos de alta qualidade e um atendimento excepcional, independentemente de você ser um ciclista profissional ou amador, homem, mulher ou não binário. Estamos sempre buscando maneiras de melhorar a experiência de compra de nossos clientes, seja por meio de grandes investimentos em tecnologia e segurança ou por meio da oferta de um estoque on-line 100% atualizado em tempo real. Isso significa que nossos clientes podem ter certeza de que seus produtos chegarão a eles de forma rápida e segura, sem surpresas desagradáveis. Na KF Bikes, valorizamos a satisfação de nossos clientes acima de tudo. Por isso, estamos comprometidos em fornecer o melhor atendimento e suporte, desde o momento em que você faz sua compra até o pós-venda. Queremos que você se sinta confiante e satisfeito ao escolher a KF Bikes como sua loja de bicicletas de confiança.
+
+    </main>
    <footer>
-        <img src="logo-branco.png">
+        <img src="logo.png">
 		<p class="copyright">&copy; Copyright monster bike - 2023</p>
         <p class="copyright">Desenvolvido por: Luiz Eduardo, Igor , guilherme cardoso , guilherme matusiak , Daniel.</p>
     </footer>
