--- a/index.html
+++ b/index.html
@@ -4,12 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>monster bike</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Monster Bike</title>
 </head>
 <body>
     <header>
-
+        <div class="logo-site">	
+				<a href="#"><img src="logo.png"></a>
+				<h1><a href="#">Monster Bike</a></h1>
+		</div>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="produtos.html">Produtos</a></li>
+					<li><a href="contato.html">Contato</a></li>
+				</ul>
+			</nav>
     </header>
+    <main class="home">
+        <h1>Sobre a Monster Bike</h1>
+        <p>A MOSTER BIKE é uma empresa apaixonada pela transformação que o uso de uma bicicleta pode trazer à vida das pessoas. Por isso, dedicamos toda a nossa energia e foco em 
+            fornecer o melhor para você, nosso cliente. </p>
+       <p>Com 1 anos de experiência e crescimento constante, nosso objetivo é proporcionar produtos de alta qualidade e um atendimento excepcional, 
+        Independentemente de você ser um ciclista profissional ou amador, homem, mulher ou não binário.</p> 
+        <p> sempre buscando maneiras de melhorar a experiência de compra de nossos clientes, seja por meio de grandes investimentos em tecnologia e segurança ou por meio da oferta de um estoque on-line 100% atualizado em tempo real.
+        Isso significa que nossos clientes podem ter certeza de que seus produtos chegarão a eles de forma rápida e segura, sem surpresas desagradáveis.</p>
+        Monster Bike, valorizamos a satisfação de nossos clientes acima de tudo. Por isso, estamos comprometidos em fornecer o melhor atendimento e suporte, desde o momento em que você faz sua compra até o pós-venda.
+        Queremos que você se sinta confiante e satisfeito ao escolher a KF Bikes como sua loja de bicicletas de confiança.
 
+    </main>
+   <footer>
+        <img src="logo.png">
+		<p class="copyright">&copy; Copyright Monster Bike - 2023</p>
+        <p class="copyright">Desenvolvido por: Luiz Eduardo, Igor , Guilherme Cardoso , Guilherme Matusiak , Daniel.</p>
+    </footer>
 </body>
 </html>
